Support new WHEMS module, add "breaker" to toggle switch for each breaker module, update toggle switch icon.

--- a/custom_components/ldata/manifest.json
+++ b/custom_components/ldata/manifest.json
@@ -7,7 +7,7 @@
   "documentation": "https://github.com/rwoldberg/ldata-ha",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/rwoldberg/ldata-ha/issues",
-  "loggers": ["aiohue"],
+  "loggers": ["ldata"],
   "requirements": [],
-  "version": "1.0.7"
+  "version": "1.0.12"
 }
