--- a/custom_components/ldata/manifest.json
+++ b/custom_components/ldata/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "ldata",
   "name": "Leviton LDATA",
-  "codeowners": ["@rwoldberg"],
+  "codeowners": ["@rwoldberg", "@MrToast99"],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/rwoldberg/ldata-ha",
-  "iot_class": "cloud_polling",
+  "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/rwoldberg/ldata-ha/issues",
   "loggers": ["ldata"],
-  "requirements": [],
-  "version": "1.1.35"
+  "requirements": ["aiohttp"],
+  "version": "2.0.0-rc1"
 }
